css/root.css
/* ... */
/*-- -------------------------- -->
<---         Navigation         -->
<--- -------------------------- -*/

/* Mobile - Top Drop Down */
@media only screen and (max-width: 1024px) {
  #navigation {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 10000;
    height: auto;
  }
  #navigation .background-color-div {
    position: absolute;
    top: 0;
    left: 0;
    background-color: #fff;
    width: 100%;
    height: 100%;
    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  }
  #navigation .container {
    display: flex;
    align-items: center;
    width: 96%;
  }
  #navigation .logo {
    display: inline-block;
    height: 4em;
    width: auto;
    margin: 0.25em 0;
  }
  #navigation .logo img {
    width: auto;
    height: 100%;
  }
  #navigation .phone {
    font-size: inherit;
    height: 2em;
    margin-left: auto;
    margin-right: 5em;
  }
  #navigation .phone img {
    width: 2em;
  }
  #navigation .hamburger-menu {
    position: absolute;
    right: 0em;
    border: none;
    height: 3em;
    width: 3em;
    z-index: 100;
    display: block;
    background: transparent;
    padding: 0;
    top: 50%;
    -webkit-transform: translateY(-50%);
            transform: translateY(-50%);
    -webkit-transition: top .3s;
    transition: top .3s;
  }
  #navigation .hamburger-menu span {
    height: 2px;
    width: 1.875em;
    background-color: #000;
    display: block;
    position: absolute;
    left: 50%;
    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
    -webkit-transition: background-color 0.3s;
    transition: background-color 0.3s;
  }
  #navigation .hamburger-menu span:before {
    content: '';
    position: absolute;
    display: block;
    height: 2px;
    width: 80%;
    background: #000;
    opacity: 1;
    top: -6px;
    left: 0;
    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
    transition: width .3s, left .3s, top .3s, -webkit-transform .5s;
    transition: width .3s, left .3s, top .3s, transform .5s;
    transition: width .3s, left .3s, top .3s, transform .5s, -webkit-transform .5s;
  }
  #navigation .hamburger-menu span:after {
    content: '';
    position: absolute;
    display: block;
    height: 2px;
    width: 80%;
    background: #000;
    opacity: 1;
    top: 6px;
    left: 0;
    -webkit-transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
    transition: width .3s, left .3s, top .3s, -webkit-transform .3s;
    transition: width .3s, left .3s, top .3s, transform .3s;
    transition: width .3s, left .3s, top .3s, transform .3s, -webkit-transform .3s;
  }
  #navigation .hamburger-menu.clicked span {
    background-color: transparent;
  }
  #navigation .hamburger-menu.clicked span:before {
    width: 100%;
    -webkit-transform: translate(-50%, -50%) rotate(225deg);
            transform: translate(-50%, -50%) rotate(225deg);
    left: 50%;
    top: 50%;
  }
  #navigation .hamburger-menu.clicked span:after {
    width: 100%;
    -webkit-transform: translate(-50%, -50%) rotate(-225deg);
            transform: translate(-50%, -50%) rotate(-225deg);
    left: 50%;
    top: 50%;
  }
  #navigation #navbar-menu {
    position: fixed;
    right: 0;
    padding: 0;
    width: 100%;
    border-radius: 0 0 0.375em 0.375em;
    z-index: -1;
    overflow: hidden;
    -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
            box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    background-color: #fff;
    top: 5.0625em;
    padding-top: 0;
    height: 0;
    -webkit-transition: height 0.3s, padding-top 0.3s, top 0.3s;
    transition: height 0.3s, padding-top 0.3s, top 0.3s;
  }
  #navigation #navbar-menu ul {
    padding: 0;
    -webkit-perspective: 700px;
            perspective: 700px;
  }
  #navigation #navbar-menu ul li {
    list-style: none;
    margin-bottom: 1.5em;
    text-align: center;
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
    opacity: 0;
    -webkit-transform: translateY(-0.4375em) rotateX(90deg);
            transform: translateY(-0.4375em) rotateX(90deg);
    -webkit-transition: opacity .5s, -webkit-transform .5s;
    transition: opacity .5s, -webkit-transform .5s;
    transition: opacity .5s, transform .5s;
    transition: opacity .5s, transform .5s, -webkit-transform .5s;
  }
  #navigation #navbar-menu ul li a {
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
    font-size: 1.1875em;
    text-align: center;
    display: inline-block;
    position: relative;
    font-weight: bold;
  }
  #navigation #navbar-menu ul li a.active:before {
    content: '';
    position: absolute;
    display: block;
    height: 0.42105263em;
    background: var(--primary);
    opacity: 1;
    bottom: -0.1em;
    border-radius: 0.21052632em;
    left: -0.31578947em;
    right: -0.31578947em;
    z-index: -1;
  }
  #navigation #navbar-menu.open {
    height: 19.125em;
    padding-top: 1.25em;
    z-index: -100;
  }
  #navigation #navbar-menu.open ul li {
    opacity: 1;
    -webkit-transform: translateY(0) rotateX(0);
            transform: translateY(0) rotateX(0);
  }
}
/* ... */

